# ChangeLog for dev-libs/libgpg-error
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.45 2006/12/09 08:37:23 alonbl Exp $

*libgpg-error-1.5 (09 Dec 2006)

  09 Dec 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.5.ebuild:
  Version bump

*libgpg-error-1.4 (29 Oct 2006)

  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.4.ebuild:
  Version bump

  19 Oct 2006; Roy Marples <uberlord@gentoo.org> libgpg-error-1.3-r1.ebuild:
  Added ~sparc-fbsd keyword.

  14 Aug 2006; Daniel Black <dragonheart@gentoo.org>
  libgpg-error-1.0-r1.ebuild:
  WANT_AUTOCONF changed to 2.5 as per QA bug #143429

*libgpg-error-1.3-r1 (30 Jul 2006)

  30 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libgpg-error-1.3-nls.patch, libgpg-error-1.3.ebuild,
  +libgpg-error-1.3-r1.ebuild:
  Version bump with a patch to fix NLS disable switch, thanks to Robert
  Annessi for reporting in bug #142162.

*libgpg-error-1.3 (30 Jun 2006)

  30 Jun 2006; Robin H. Johnson <robbat2@gentoo.org>
  +libgpg-error-1.3.ebuild:
  Version bump.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libgpg-error-1.1.ebuild:
  Add ~x86-fbsd keyword.

  12 Oct 2005; Sven Wegener <swegener@gentoo.org>
  libgpg-error-1.0-r1.ebuild, libgpg-error-1.1.ebuild:
  Really fix bug #106399.

  12 Oct 2005; Daniel Black <dragonheart@gentoo.org>
  libgpg-error-1.0-r1.ebuild, libgpg-error-1.1.ebuild:
  Fixed elibctoolize that I broke - bug #106399. Sorry uclibc users

  28 Sep 2005; Daniel Black <dragonheart@gentoo.org>
  libgpg-error-1.1.ebuild:
  removed deprecated uclibtoolize - bug #106399. Thanks Chris Slycord

  17 Aug 2005; MATSUU Takuto <matsuu@gentoo.org> libgpg-error-1.0-r1.ebuild:
  Stable on sh.

*libgpg-error-1.1 (07 Aug 2005)

  07 Aug 2005; Daniel Black <dragonheart@gentoo.org>
  -libgpg-error-0.6-r1.ebuild, -libgpg-error-0.7-r1.ebuild,
  -libgpg-error-1.0.ebuild, libgpg-error-1.0-r1.ebuild,