@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libgpg-error
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.45 2006/12/09 08:37:23 alonbl Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.46 2007/01/25 20:26:21 eroyf Exp $
+
+  25 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org>
+  libgpg-error-1.5.ebuild:
+  Stable on MIPS.
 
 *libgpg-error-1.5 (09 Dec 2006)
 
